# clean-arch-actix-rust

./: docker-compose.yaml
cqrs_core/: Cargo.toml
hhrr_management/: .env  Cargo.toml  diesel.toml
hhrr_management/src/: main.rs
hhrr_management/src/application/: mod.rs
hhrr_management/src/application/authentication/: mod.rs
hhrr_management/src/application/authentication/command/: mod.rs
hhrr_management/src/application/demo/: mod.rs
hhrr_management/src/application/demo/command/: mod.rs
hhrr_management/src/application/demo/query/: mod.rs
hhrr_management/src/application/demo/services/: authenticate_user_service.rs  mod.rs  register_user_service.rs
hhrr_management/src/core/: mod.rs
hhrr_management/src/core/bus/: command_bus.rs  event_bus.rs  mod.rs  query_bus.rs
hhrr_management/src/core/container/: mod.rs  repository_container.rs  service_container.rs
hhrr_management/src/domain/: mod.rs
hhrr_management/src/domain/core_user/: mod.rs
hhrr_management/src/domain/core_user/error/: mod.rs
hhrr_management/src/domain/core_user/event/: core_user_created_event.rs  mod.rs
hhrr_management/src/domain/core_user/model/: core_user.rs  mod.rs
hhrr_management/src/domain/core_user/repository/: core_user_repository_trait.rs  mod.rs
hhrr_management/src/domain/demo/error/: demo_error.rs  mod.rs
hhrr_management/src/domain/demo/event/: demo_entry_created_event.rs  demo_entry_published_event.rs  mod.rs
hhrr_management/src/domain/demo/model/: demo_model.rs
hhrr_management/src/domain/demo/repository/: demo_repository_trait.rs  mod.rs
hhrr_management/src/infrastructure/: mod.rs
hhrr_management/src/infrastructure/actix_web/: mod.rs
hhrr_management/src/infrastructure/actix_web/api_rest/: mod.rs
hhrr_management/src/infrastructure/database/: mod.rs
(+80 files in other folders)
