[package]
name = "hhrr_management"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
actix-web = "4"
cqrs_domain = { path = "../cqrs_domain" }
cqrs_derive_macro = { path = "../cqrs_derive_macro" }
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "serde_json", "uuid"] }
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["v4"] }