[package]
name = "hhrr_management"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
actix-web = "4"
cqrs_domain = { path = "../cqrs_domain" }
cqrs_derive_macro = { path = "../cqrs_derive_macro" }
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"]}
futures = "0.3.31"
tokio = "1.39.2"